# ds_sem3_assignment_main

./: Cargo.toml
examples/: foo.json  foo1.json
html/: index.html  styles.css
src/: main.rs
src/cli/: command.rs  error.rs  mod.rs  runner.rs
src/computation/: compute.rs
src/config/: config.rs  from_config.rs  mod.rs
src/coordinate_parser/: cparser.rs  mod.rs
src/web/: handeler.rs  http.rs  mod.rs
