[package]
name = "ds_sem3_assignment_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.8", features = ["derive"]}
log = "0.4.20"
env_logger = "0.10.1"
serde = "1.0.193"
serde_json = {version = "1.0.108", features = []}
colored = "2.0.4"
thiserror = "1.0.50"
derive_setters = "0.1.6"
